# wattkeeper

./: .editorconfig  .gitattributes  .gitignore  .pre-commit-config.yaml  CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENSE  Makefile  README.md  ROADMAP.md  SECURITY.md  mkdocs.yml  pyproject.toml
.github/: copilot-instructions.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/prompts/: README.md  phase-0-scaffold.prompt.md  phase-1a-hotplug-scanner.prompt.md  phase-1b-config-services.prompt.md  phase-1c-mdns-health.prompt.md  phase-2-image.prompt.md  phase-3a-controller-discovery.prompt.md  phase-3b-adoption.prompt.md  phase-3c-metrics-ui.prompt.md  phase-4-home-assistant.prompt.md  stretch-simulation-rig.prompt.md
.github/release/: version.toml
.github/skills/: README.md
.github/workflows/: auto-release.yml  ci.yml  docs.yml  rc.yml  release.yml  version-bump.yml
agent/: README.md  docker-entrypoint.sh  go.mod  go.sum
agent/nodeapi/: service.go
controller/: Dockerfile  go.mod  go.sum
controller/web/: package-lock.json  package.json  tsconfig.app.tsbuildinfo
deploy/: install.sh  strom-agent.service  strom-watchdog.conf  strom-zramswap.conf  wattkeeper-agent.service
docs/: faq.md  features.md  getting-started.md  home-assistant.md  index.md
docs/assets/: theme.css
docs/reference/: agent.md  architecture-decisions.md  image.md  index.md
image/: README.md  build.sh  config
image/stage-wattkeeper/: EXPORT_IMAGE
sim/: README.md  docker-compose.yml
sim/scenarios/: multi_ups.sh
tools/: __main__.py  versioning.py
(+57 files in other folders)
